Changes for 1.6.3

 - [ZBX-659] added define for menu caching (Artem)
 - [ZBX-581] fixed latest data auto-refresh cripples filter viewing issue (Artem)
 - [ZBX-657] improved performance of the graph related screen due to missing index (Sasha)
 - [ZBX-656] fixed warning zbx_malloc: allocating already allocated memory in json.c (Sasha)
 - [DEV-282] fixes frontend vulnerabilities (Artem)

Changes for 1.6.2

 - [ZBX-653] fixes for postgresql (Artem)
 - [DEV-137] fixed compilation warnings (Sasha)
 - [ZBX-652] improved support of SNMP items (Sasha)
 - [ZBX-589] added processing of quoted numbers ("0.5" => float 0.5) (Sasha)
 - [DEV-275] changed value processing. Multiplier after delta (Sasha)
 - [DEV-274] added overflow check for uint64 for incoming values (Sasha)
 - [ZBX-506] fixed duplicate UnavailableDelay in zabbix_server.conf (Sasha)
 - [ZBX-428] added internal check zabbix[requiredperformance] (Sasha)
 - [ZBX-639] fixed numeric snmp oid for ifOutOctets. Thanks to Alexandr Kovalenko. (Sasha)
 - [DEV-268] added support of net.tcp.listen under FreeBSD (Sasha)
 - [ZBX-651] fixed possible memory leak in autodiscovery actions (Sasha)
 - [DEV-268] added support of system.boottime under Solaris (Sasha)
 - [DEV-268] added support of system.cpu.load under Solaris 2.6 (Sasha)
 - [ZBX-650] DM: fixed memory leak in synchronization of node configuration (Sasha)
 - [ZBX-650] fixed rare race condition in DBimplode_exp (Sasha)
 - [ZBX-650] fixed cleanup of open file descriptor (Sasha)
 - [ZBX-649] fixed problem with "Too many open files" by agent under Solaris and AIX (Sasha)
 - [DEV-268] added support of system.swap.size under FreeBSD (Sasha)
 - [DEV-276] added support of HTML text in plaintext view in screens (Artem)
 - [ZBX-395] fixed item list for simple graph (Artem)
 - [ZBX-334] added sorting to group list in elements copy form (Artem)
 - [ZBX-509] fixed problem with user rights to hostgroup without any host (Artem)